[gd_scene load_steps=8 format=3 uid="uid://cbtlsos7rkx4a"]

[ext_resource type="Script" path="res://Scenes/GUI/MainTheme.gd" id="1_fclg4"]

[sub_resource type="Animation" id="Animation_syyu5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_msy4q"]
resource_name = "pulse"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.03, 1.03)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q444w"]
_data = {
"RESET": SubResource("Animation_syyu5"),
"pulse": SubResource("Animation_msy4q")
}

[sub_resource type="Animation" id="Animation_ec3b7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_f64q6"]
resource_name = "switch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.02837),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vsogv"]
_data = {
"RESET": SubResource("Animation_ec3b7"),
"switch": SubResource("Animation_f64q6")
}

[node name="MainTheme" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fclg4")

[node name="background" type="ColorRect" parent="."]
z_index = -999
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.403922, 0.643137, 0.686275, 1)

[node name="name" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 95.0
offset_right = 801.0
offset_bottom = 286.0
theme_override_colors/font_color = Color(0.172549, 0.290196, 0.396078, 1)
theme_override_colors/font_outline_color = Color(0.843137, 0.811765, 0.690196, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 110
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlay" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 270.0
offset_right = 658.0
offset_bottom = 368.0
pivot_offset = Vector2(82, 49)
theme_override_colors/font_color = Color(0.172549, 0.290196, 0.396078, 1)
theme_override_colors/font_outline_color = Color(0.843137, 0.811765, 0.690196, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 65
action_mode = 0
text = "PLAY"
flat = true

[node name="pulse" type="AnimationPlayer" parent="ButtonPlay"]
speed_scale = 1.1
libraries = {
"": SubResource("AnimationLibrary_q444w")
}

[node name="switchRect" type="ColorRect" parent="."]
z_index = 999
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0)

[node name="switch" type="AnimationPlayer" parent="switchRect"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_vsogv")
}

[node name="ButtonSettings" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 584.0
offset_right = 139.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0.184314, 0.286275, 0.396078, 1)
theme_override_colors/font_outline_color = Color(0.843137, 0.811765, 0.690196, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "settings"
flat = true

[node name="settings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 16.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 576.0

[node name="Panel" type="Panel" parent="settings"]
layout_mode = 0
offset_right = 304.0
offset_bottom = 256.0

[connection signal="mouse_entered" from="ButtonPlay" to="." method="_on_button_play_mouse_entered"]
[connection signal="mouse_exited" from="ButtonPlay" to="." method="_on_button_play_mouse_exited"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_button_settings_pressed"]
